content/browser/web_contents/web_contents_view_android.h
@@ -129,6 +129,7 @@ class WebContentsViewAndroid : public WebContentsView,
                      const gfx::PointF& location,
                      const gfx::PointF& screen_location);
   void OnDragEnded();
+  void OnSystemDragEnded();
 
   // The WebContents whose contents we display.
   WebContentsImpl* web_contents_;
@@ -147,6 +148,9 @@ class WebContentsViewAndroid : public WebContentsView,
 
   // Interface used to get notified of events from the synchronous compositor.
   SynchronousCompositorClient* synchronous_compositor_client_;
+
+  gfx::PointF drag_location_;
+  gfx::PointF drag_screen_location_;
 
   DISALLOW_COPY_AND_ASSIGN(WebContentsViewAndroid);
 };
